--- a/docker/trino-client/Dockerfile
+++ b/docker/trino-client/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
       ca-certificates \
-  && rm -rf /var/lib/apt/lists/*
+  && rm -RF /var/lib/apt/lists/*
 
 WORKDIR /src
 
